Add more languages, add custom translations

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -5,7 +5,8 @@
     "day": "Tag",
     "threeDays": "3 Tags",
     "week": "Woche",
-    "month": "Monat"
+    "month": "Monat",
+    "showMore": "Zeig mehr"
   },
   "months": {
     "january": "Januar",
