Fix month overflowing events

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -6,7 +6,7 @@
     "threeDays": "3 Tags",
     "week": "Woche",
     "month": "Monat",
-    "showMore": "Zeig mehr"
+    "showMore": "Mehr"
   },
   "months": {
     "january": "Januar",
