--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,7 +6,7 @@
     "threeDays": "3 Days",
     "week": "Week",
     "month": "Month",
-    "showMore": "Show more"
+    "showMore": "More"
   },
   "months": {
     "january": "January",
