--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -6,7 +6,7 @@
     "threeDays": "3 Días",
     "week": "Semana",
     "month": "Mes",
-    "showMore": "Mostrar más"
+    "showMore": "Más"
   },
   "months": {
     "january": "Enero",
