--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -6,7 +6,7 @@
     "threeDays": "3 Jours",
     "week": "Semaine",
     "month": "Mois",
-    "showMore": "Montre plus"
+    "showMore": "Plus"
   },
   "months": {
     "january": "Janvier",
